hw4/part2/note.txt
i""
lder)	
        ^
SyntaxError: invalid syntax
#single link
def single_link2(c_cluster,o_cluster):
	while (len(o_cluster) != 10):
		for x in range(1,len(c_cluster)):
			min_holder = [];
			for j in range(1,len(c_cluster)):
				#call the min function
				distance = min_cluster_distance
				min_holder.append(distance,j);

				min_holder = sorted(min_holder[i],key=immgetter(0)
				#c_cluster = np.delete(c_cluster, j, axis=None)
				#c_cluster = np.delete(c_cluster, x, axis=None)

				#c_cluster = c_cluster - c_cluster[j]
				#c_cluster = c_cluster - c_cluster[x]

				#o_cluster = np.delete(o_cluster, j, 0)
				#o_cluster[x] = np.add(o_cluster[j],o_cluster[x])
				#o_cluster[x] = o_cluster[x]+o_cluster[j]
				#o_cluster = o_cluster - o_cluster[j];
			#c_cluster = o_cluster	
"""

#find min between two clusters
def min_cluster_distance(c_cluster,x,j):
	distance = 100
	for len(c_cluster[x]):
		for len(c_cluster[j]):
			updated_distance = np.sqrt(sum(np.square(c_cluster[x] - c_cluster[j])))
			if (distance > updated_distance):
				distance = updated_distance
	return distance


